--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.9.0",
     "classnames": "^2.5.1",
     "framer-motion": "^12.18.1",
+    "linkify-react": "^4.3.1",
+    "linkifyjs": "^4.3.1",
     "next": "^15.3.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
